--- a/index.qmd
+++ b/index.qmd
@@ -1,38 +1,7 @@
 ---
-title: "Quarto Article Template"
-subtitle: "A personal template for Quarto articles"
+title: "MRI Total"
+subtitle: "Towards an automated, standardized, reproducible, version-controlled, quality-assured, privacy-compliant processing pipeline for MRI data"
 # date:
 # date-modified:
 engine: knitr
 ---
-
-## Edits
-
-### Necessary
-
-1. Edit the name of the R Project and `.Rproj` file
-1. Edit the article title and file name.
-1. Edit the URL for website analytics in [`plausible.html`](plausible.html)
-
-### Optional
-
-1. Edit the copyright
-1. Edit the license
-
-## Publish to GitHub Pages
-
-For details, see [this chapter in the Quarto documentation](https://quarto.org/docs/publishing/github-pages.html).
-
-```{bash}
-rm -r docs
-```
-
-```{bash}
-quarto publish gh-pages
-```
-
-## Website Analytics
-
-This website uses [Plausible](https://plausible.io/) for website analytics.
-Plausible is an "intuitive, lightweight and open source web analytics", does not use cookies and is fully compliant with GDPR, CCPA and PECR.
-If you use this template, make sure to modify the URL in [`plausible.html`](plausible.html).
