adjust subtitle, add details about abstract

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,13 @@
 ---
 title: "MRI Total"
-subtitle: "Towards an automated, standardized, reproducible, version-controlled, quality-assured, privacy-compliant processing pipeline for MRI data"
+subtitle: "Towards an automated, standardized, reproducible, version-controlled, transparent, quality-assured, privacy-compliant processing pipeline for MRI data"
 # date:
 # date-modified:
 engine: knitr
 ---
+
+## Abstract
+
+> Abstract: Submit an abstract of 80-120 words describing your poster, emphasizing the computational methodologies used and the application areas covered.
+
+> We encourage you to submit posters that highlight either the structure of their institutional setup while working in data science and computation, and/or present sample projects in this area. Posters should provide a concise overview of the computational methodologies employed and the application areas they address.
