--- a/index.qmd
+++ b/index.qmd
@@ -4,18 +4,16 @@ subtitle: "Towards an automated, standardized, reproducible, version-controlled,
 # date:
 # date-modified:
 engine: knitr
+abstract: |
+  ^[Submit an abstract of 80-120 words describing your poster, emphasizing the computational methodologies used and the application areas covered.]
+  Neuroscientists at University of Hamburg (UHH) collect human brain imaging data in over XX studies per year.
+  However, this data treasure is not systematically standardized, stored, or controlled for quality.
+  We propose an institution-wide processing pipeline for human brain imaging data that connects state-of-the-art open-source neuroinformatics software tools and leverages UHH computational infrastructure, including the object storage and high-performance computing cluster.
+  Immediately following collection, data are transformed to the Brain Imaging Data Structure (BIDS) standard and submitted to in-depth automated quality assurance (MRIQC).
+  In addition, an interactive dashboard allows browsing metadata of available data sets and MRI quality metrics, fostering transparency and scientific exchange.
+  This project promises high-quality reproducible research outputs and boost the efficiency of scientific workflows.
 ---
 
-## Abstract
 
-> Abstract: Submit an abstract of 80-120 words describing your poster, emphasizing the computational methodologies used and the application areas covered.
 
-> We encourage you to submit posters that highlight either the structure of their institutional setup while working in data science and computation, and/or present sample projects in this area. Posters should provide a concise overview of the computational methodologies employed and the application areas they address.
-
-Neuroscientists at University of Hamburg (UHH) collect human brain imaging data in over XX studies per year.
-However, this data treasure is not systematically standardized, stored,  or controlled for quality.
-We propose a  processing pipeline for human brain imaging data that leverages UHH computational infrastructure, including the object storage and high-performance computing cluster, in combination with state-of-the-art open-source neuroinformatics tools.
-Right after collection, data are transformed to the Brain Imaging Data Structure (BIDS),
-
-This project promises to ensure transparency and reproducibility and efficient research.
 
